--- a/index.html
+++ b/index.html
@@ -119,7 +119,59 @@
       </div>
     </header>
     <main class="lg:container mx-auto">
- 
+    <!-- Featuered bike section -->
+    <section>
+      <h2 class="text-[#000000] font-semibold text-5xl text-center mt-20">Featured Bikes In This Year</h2>
+      <p class="text-[#E76F51] text-sm font-semibold text-center mt-3">Best bike collection</p>
+      <hr class=" border-[#E76F51]  w-20 mx-auto mt-2 mb-10">
+      <div class="grid grid-cols-1 lg:grid-cols-3 lg:mx-auto">
+        <img class="mx-auto" src="images/sliders/bike4.png" alt="">
+        <img class="mx-auto" src="images/sliders/bike3.png" alt="">
+        <img class="mx-auto" src="images/sliders/bike2.png" alt="">
+      </div>
+    </section>
+    <!-- latest news -->
+     <section>
+      <h2 class="text-[#0A0826] font-semibold text-5xl text-center mt-20 mb-10">latest News</h2>
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-14">
+          <div class="card border-2 border-gray-200 w-96 ">
+            <figure>
+              <img class="pt-5" src="images/others/latest1.png" alt="">
+            </figure>
+            <div class="card-body">
+              <h2 class="text-2xl card-title text-[#18191F]">Ducati XDIAVEL S-73</h2>
+              <p class="text-[#6C6C6C] my-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn bg-[#E76F51] text-[white] px-8">Read More</button>
+              </div>
+            </div>
+          </div>
+          <div class="card border-2 border-gray-200 w-96 ">
+            <figure>
+              <img class="pt-5" src="images/others/latest2.png" alt="">
+            </figure>
+            <div class="card-body">
+              <h2 class="text-2xl card-title text-[#18191F]">Motorcycles & Scooters</h2>
+              <p class="text-[#6C6C6C] my-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn btn-outline text-[#E76F51] px-8">Read More</button>
+              </div>
+            </div>
+          </div>
+          <div class="card border-2 border-gray-200 w-96 ">
+            <figure>
+              <img class="pt-5" src="images/others/latest3.png" alt="">
+            </figure>
+            <div class="card-body">
+              <h2 class="text-2xl card-title text-[#18191F]">2021 Honda CBR500R</h2>
+              <p class="text-[#6C6C6C] my-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn btn-outline text-[#E76F51] px-8">Read More</button>
+              </div>
+            </div>
+          </div>
+      </div>
+     </section>
     </main>
     <footer>
 
